fix directional > bidirectional mistake

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "You can download this data from the NEON Data portal, or by clicking the link below:\n",
     "\n",
-    "**Download the LIRO Directional Reflectance Tile:** <a href=\"https://storage.googleapis.com/neon-aop-provisional-products/2022/FullSite/D05/2022_LIRO_3/L3/Spectrometer/Reflectance/NEON_D05_LIRO_DP3_290000_5097000_bidirectional_reflectance.h5\" class=\"link--button link--arrow\">NEON_D05_LIRO_DP3_290000_5097000_reflectance.h5</a>\n",
+    "**Download the LI Bid Directional Reflectance Tile:** <a href=\"https://storage.googleapis.com/neon-aop-provisional-products/2022/FullSite/D05/2022_LIRO_3/L3/Spectrometer/Reflectance/NEON_D05_LIRO_DP3_290000_5097000_bidirectional_reflectance.h5\" class=\"link--button link--arrow\">NEON_D05_LIRO_DP3_290000_5097000_reflectance.h5</a>\n",
     "\n",
     "### Additional Resource\n",
     "If you are new to NEON hyperspectral reflectance data, we recommend going through the tutorial series below, or at least the first lesson. This series uses the directional reflectance data (DP3.30006.001), but the same principles apply.\n",
