--- a/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
+++ b/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
@@ -1,5 +1,5 @@
 ---
-syncID: 
+syncID: 8ab4445008fd408fab9992c5c8751505
 title: "Test reticulate tabs"
 description: Test for tabbed tutorials with R and Python code. Do not publish this tutorial.
 dateCreated: '2024-04-25'
@@ -10,7 +10,7 @@ estimatedTime: 0 hours
 packagesLibraries: neonUtilities, neonutilities
 topics: data-management, rep-sci
 languageTool: R, Python
-code1: 
+code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Other/Concept-intros/testing/test_code_tabs.R
 tutorialSeries:
 urlTitle: test-code-tabs
 ---
