link to Data Carpentry Raster/Vector R workshop to fix broken link
Un-published NEON raster series since it used rgdal instead of terra, Carpentry workshop is up to date.

--- a/tutorials/R/R-skills/intro-to-time-series/07-Culmination-Work-With-NDVI-and-Met-Data-In-R/07-Culmination-Work-With-NDVI-and-Met-Data-In-R.Rmd
+++ b/tutorials/R/R-skills/intro-to-time-series/07-Culmination-Work-With-NDVI-and-Met-Data-In-R/07-Culmination-Work-With-NDVI-and-Met-Data-In-R.Rmd
@@ -17,10 +17,8 @@ urlTitle: dc-culm-activity-ndvi-met-data-r
 
 This tutorial is a culmination activity for the series on 
 <a href="https://www.neonscience.org/tabular-time-series" target="_blank"> working with tabular time series data in R </a>.
-Other related series include:
-<a href="https://www.neonscience.org/raster-data-series" target="_blank"> working with raster time-series data in R</a>
-and
-<a href="https://www.neonscience.org/vector-data-series" target="_blank"> working with vector data in R </a>.
+Other related series include Data Carpentry's 
+<a href="https://datacarpentry.org/r-raster-vector-geospatial/" target="_blank">Introduction to Geospatial Raster and Vector Data with R</a>.
 
 <div id="ds-objectives" markdown="1">
 
