update broken link to CRAN xROI > GitHub xROI

--- a/tutorials/R/Phenocam/phenocam-tools/extracting-timeseries-with-xroi/extracting-timeseries-with-xroi.Rmd
+++ b/tutorials/R/Phenocam/phenocam-tools/extracting-timeseries-with-xroi/extracting-timeseries-with-xroi.Rmd
@@ -78,7 +78,7 @@ functions for ROI processing.
 ## Launch xROI
 
 A comprehensive user manual for low-level image processing using *xROI* is available from 
-<a href="https://cran.r-project.org/package=xROI/xROI.pdf" target="_blank">CRAN xROI.pdf</a>. 
+<a href="https://github.com/bnasr/xROI" target="_blank">GitHub xROI</a>. 
 While the user manual includes a set of examples for each function; here we 
 will learn to use the graphical interactive mode. 
 
