--- a/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
+++ b/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
@@ -24,7 +24,7 @@ library(htmltools)
 
 ```{r html}
 
-htmltools::includeHTML("https://github.com/cklunch/NEON-Data-Skills/blob/main/tutorials-in-development/Other/test_code_tabs.html")
+htmltools::tags$iframe(src="https://github.com/cklunch/NEON-Data-Skills/blob/main/tutorials-in-development/Other/test_code_tabs.html", width="100%", height=1600)
 
 ```
 
