--- a/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
+++ b/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
@@ -22,7 +22,7 @@ library(htmltools)
 ```
 
 
-```{r html}
+```{r html, echo=FALSE}
 
 htmltools::tags$iframe(src="https://github.com/cklunch/NEON-Data-Skills/blob/main/tutorials-in-development/Other/test_code_tabs.html", width="100%", height=1600)
 
