--- a/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
+++ b/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
@@ -18,13 +18,22 @@ urlTitle: test-code-tabs
 ```{r setup, echo=FALSE}
 
 library(htmltools)
+library(httr)
+res <- GET("https://api.github.com/repos/NEONScience/NEON-Data-Skills/contents/tutorials-in-development/Other/test_code_tabs.html")
+r2 <- content(res)
+download.file(r2$download_url, destfile=paste(getwd(), "/tut_html.html", sep=""), mode="wb", quiet=T)
 
 ```
 
 
 ```{r html, echo=FALSE, warning=FALSE, message=FALSE}
 
-htmltools::includeHTML("https://raw.githubusercontent.com/cklunch/NEON-Data-Skills/main/tutorials-in-development/Other/test_code_tabs.html")
+htmltools::tags$iframe(paste(getwd(), "/tut_html.html", sep=""))
 
 ```
 
+``` {r cleanup, echo=FALSE}
+
+unlink(paste(getwd(), "/tut_html.html", sep=""))
+
+```
