--- a/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
+++ b/tutorials/Other/Concept-intros/testing/test_code_tabs.Rmd
@@ -19,7 +19,7 @@ urlTitle: test-code-tabs
 
 library(htmltools)
 library(httr)
-res <- GET("https://api.github.com/repos/NEONScience/NEON-Data-Skills/contents/tutorials-in-development/Other/test_code_tabs.html")
+res <- GET("https://api.github.com/repos/cklunch/NEON-Data-Skills/contents/tutorials-in-development/Other/test_code_tabs.html")
 r2 <- content(res)
 download.file(r2$download_url, destfile=paste(getwd(), "/tut_html.html", sep=""), mode="wb", quiet=T)
 
@@ -28,7 +28,8 @@ download.file(r2$download_url, destfile=paste(getwd(), "/tut_html.html", sep="")
 
 ```{r html, echo=FALSE, warning=FALSE, message=FALSE}
 
-htmltools::tags$iframe(paste(getwd(), "/tut_html.html", sep=""))
+htmltools::tags$iframe(src = base64enc::dataURI(file=paste(getwd(), "/tut_html.html", sep=""), 
+                                                mime="text/html; charset=UTF-8"), width="100%", height=1600)
 
 ```
 
