--- a/tutorials/Other/Concept-intros/test_tabs_fragment/test_code_tabs_fragment.Rmd
+++ b/tutorials/Other/Concept-intros/test_tabs_fragment/test_code_tabs_fragment.Rmd
@@ -24,7 +24,7 @@ library(htmltools)
 
 ```{r html, echo=FALSE, warning=FALSE, message=FALSE}
 
-htmltools::includeHTML("https://github.com/cklunch/NEON-Data-Skills/blob/main/tutorials-in-development/Other/test_code_tabs_fragment.html")
+htmltools::includeHTML("https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials-in-development/Other/test_code_tabs_fragment.html")
 
 ```
 
