add missing syncID

--- a/tutorials/Other/GEE_Python/01_aop_intro_gee_py/Intro_AOP_Datasets_GEE_Python.ipynb
+++ b/tutorials/Other/GEE_Python/01_aop_intro_gee_py/Intro_AOP_Datasets_GEE_Python.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "syncID: \n",
+    "syncID: d14552056cc440549ae3c1bac80eaeb7\n",
     "title: \"Intro to AOP Datasets in Google Earth Engine (GEE) using Python\"\n",
     "description: \"Explore AOP reflectance, camera, and lidar datasets in GEE\"\n",
     "dateCreated: 2023-07-25\n",
