--- a/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/04-Multi-Band-Rasters-In-R.Rmd
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/04-Multi-Band-Rasters-In-R.Rmd
@@ -82,13 +82,13 @@ a raster can contain 1 or more bands.
     raster. Source: National Ecological Observatory Network (NEON).</figcaption>
 </figure>
 
-To work with multi-band rasters in R, we need to change how we import and plot our data in several ways. 
+To work with multiband rasters in R, we need to change how we import and plot our data in several ways. 
 
-* To import multi band raster data we will use the `stack()` function.
-* If our multi-band data are imagery that we wish to composite, we can use `plotRGB()` (instead of `plot()`) to plot a 3 band raster image.
+* To import multiband raster data we will use the `stack()` function.
+* If our multiband data are imagery that we wish to composite, we can use `plotRGB()` (instead of `plot()`) to plot a 3 band raster image.
 
-## About Multi-Band Imagery
-One type of multi-band raster dataset that is familiar to many of us is a color image. A basic color image consists of three bands: red, green, and blue. Each band represents light reflected from the red, green or blue portions of the electromagnetic spectrum. The pixel brightness for each band, when composited creates the colors that we see in an image. 
+## About MultiBand Imagery
+One type of multiband raster dataset that is familiar to many of us is a color image. A basic color image consists of three bands: red, green, and blue. Each band represents light reflected from the red, green or blue portions of the electromagnetic spectrum. The pixel brightness for each band, when composited creates the colors that we see in an image. 
 
 <figure>
     <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/RGBSTack_1.jpg">
@@ -100,8 +100,7 @@ One type of multi-band raster dataset that is familiar to many of us is a color 
 </figure>
 
 ## Getting Started with Multi-Band Data in R
-To work with multi-band raster data we will use the `raster` and `rgdal`
-packages.
+To work with multiband raster data we will use the `terra` package.
 
 ```{r load-libraries }
 
@@ -125,9 +124,6 @@ In this tutorial, the multi-band data that we are working with is imagery collec
 <a href="https://www.neonscience.org/data-collection/airborne-remote-sensing" target="_blank">NEON Airborne Observation Platform</a>
 high resolution camera over the <a href="https://www.neonscience.org/field-sites/field-sites-map/HARV" target="_blank">NEON Harvard Forest field site</a>. Each RGB image is a 3-band raster. The same steps would apply to working with a multi-spectral image with 4 or more bands - like Landsat imagery, or even hyperspectral imagery (in geotiff format). We can plot each band of a multi-band image individually. 
 
-<div id="ds-dataTip" markdown="1">
-<i class="fa fa-star"></i> **Data Tip:** In many GIS applications, a single band would render as a single image in grayscale. We will therefore use a grayscale palette to render individual bands. 
-</div>
 
 ```{r download-harv-camera-data}
 
@@ -155,7 +151,7 @@ plotRGB(RGB_HARV, axes=F)
 
 Or we can plot each bands separately as follows:
 
-```{r plot-RGB-now, fig.cap="Red, green, and blue bands of the camera imagery at NEON's Harvard Forest (HARV) site", echo=FALSE, message=FALSE}
+```{r plot-bands-separately, fig.cap=c("Red band", "Green band", "Blue band")}
 
 # Determine the number of bands
 num_bands <- nlyr(RGB_HARV)
@@ -173,48 +169,10 @@ for (i in 1:num_bands) {
   plot(RGB_HARV[[i]], main=paste("Band", i), col=colors[[i]])
 }
 ```
-Let's take a look at some attributes of this multiband raster. In a multiband dataset, each band of the raster will always have the same *extent*, *CRS* and *resolution*.  
-
-```{r read-single-band, fig.cap="Red band of NEON's site Harvard Forest"}
- 
-# Read in multi-band raster with raster function. 
-# Default is the first band only.
-RGB_band1_HARV <- 
-  raster(paste0(wd,"NEON-DS-Airborne-Remote-Sensing/HARV/RGB_Imagery/HARV_RGB_Ortho.tif"))
-
-# create a grayscale color palette to use for the image.
-grayscale_colors <- gray.colors(100,            # number of different color levels 
-                                start = 0.0,    # how black (0) to go
-                                end = 1.0,      # how white (1) to go
-                                gamma = 2.2,    # correction between how a digital 
-                                # camera sees the world and how human eyes see it
-                                alpha = NULL)   #Null=colors are not transparent
-
-# Plot band 1
-plot(RGB_band1_HARV, 
-     col=grayscale_colors, 
-     axes=FALSE,
-     main="RGB Imagery - Band 1-Red\nNEON Harvard Forest Field Site") 
-
-# view attributes: Check out dimension, CRS, resolution, values attributes, and 
-# band.
-RGB_band1_HARV
-```
-
-Notice that when we look at the attributes of RGB_Band1, we see :
-
-`band: 1  (of  3  bands)`
-
-This is R telling us that this particular raster object has more bands (3)
-associated with it.
-
-<div id="ds-dataTip" markdown="1">
-<i class="fa fa-star"></i> **Data Tip:** The number of bands associated with a 
-raster object can also be determined using the `nbands` slot. Syntax is 
-`ObjectName@file@nbands`, or specifically for our file: `RGB_band1_HARV@file@nbands`.
-</div>
 
 ### Image Raster Data Attributes
+
+We can display some of the attributes about the raster, as shown below:
 
 ``` {r raster-attributes}
 # Print dimensions
@@ -271,6 +229,7 @@ pixels with more red in them (a strong red reflection). Smaller numbers (towards
 To plot an RGB image, we mix red + green + blue values into one single color to create a full color image - this is the standard color image a digital camera creates.
 
 <div id="ds-challenge" markdown="1">
+
 ### Challenge: Making Sense of Single Bands of a Multi-Band Image
 Go back to the code chunk where you plotted each band separately. Compare the plots of band 1 (red) and band 2 (green). Is the forested area darker or lighter in band 2 (the green band) compared to band 1 (the red band)?  
 
@@ -328,6 +287,7 @@ plotRGB(RGB_HARV_lin_stretch, stretch="hist")
 In this case, the stretch doesn't enhance the contrast our image significantly given the distribution of reflectance (or brightness) values is distributed well between 0 and 255, and applying a stretch appears to introduce some artificial, almost purple-looking brightness to the image.
 
 <div id="ds-challenge" markdown="1">
+
 ### Challenge: What Methods Can Be Used on an R Object?
 We can view various methods available to call on an R object with `methods(class=class(objectNameHere))`. Use this to figure out:
 
