add with fix to image stretch code chunk

--- a/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/04-Multi-Band-Rasters-In-R.Rmd
+++ b/tutorials/R/Geospatial-skills/intro-raster-r/04-Multi-Band-Rasters-In-R/04-Multi-Band-Rasters-In-R.Rmd
@@ -277,10 +277,10 @@ The true color image plotted at the beginning of this lesson looks pretty decent
 # What does stretch do?
 
 # Plot the linearly stretched raster
-plotRGB(RGB_HARV_lin_stretch, stretch="lin")
+plotRGB(RGB_HARV, stretch="lin")
 
 # Plot the histogram-stretched raster
-plotRGB(RGB_HARV_lin_stretch, stretch="hist")
+plotRGB(RGB_HARV, stretch="hist")
 
 ```
 
